# intro2cc_ex1

./: CMakeLists.txt  bit_serializer.c  bit_serializer.h  channel.c  connect_socket.c  connect_socket.h  convention.h  hamming.c  hamming.h  main_test.c  receiver.c  sender.c  test_hamming.c
